Closed
Bug 982812
Opened 12 years ago
Closed 12 years ago
Australis: Garbage remains on contents area when fullscreen mode
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla30
| Tracking | Status | |
|---|---|---|
| firefox29 | --- | unaffected |
| firefox30 | --- | verified |
People
(Reporter: alice0775, Assigned: mattwoodrow)
References
(Blocks 1 open bug)
Details
Attachments
(3 files)
Build Identifier:
https://hg.mozilla.org/mozilla-central/rev/44ae8462d6ab
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:30.0) Gecko/20100101 Firefox/30.0 ID:20140312030201
*This does not happen Aurora29.0a2.
*This does not happen holly29.0a2.
Steps To Reproduce:
1. Press F11
2. Repeat step.1 if necessary
Graphics
--------
Adapter Description: VMware SVGA 3D
Adapter Drivers: vm3dum64 vm3dum vm3dgl64 vm3dgl
Adapter RAM: 128
Device ID: 0x0405
Direct2D Enabled: Blocked for your graphics card because of unresolved driver issues.
DirectWrite Enabled: false (6.3.9600.16384)
Driver Date: 7-12-2013
Driver Version: 7.14.1.5025
GPU #2 Active: false
GPU Accelerated Windows: 0/1 Basic Blocked for your graphics card because of unresolved driver issues.
Vendor ID: 0x15ad
WebGL Renderer: Google Inc. -- ANGLE (VMware SVGA 3D Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote: false
AzureCanvasBackend: skia
AzureContentBackend: cairo
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0
| Reporter | ||
Comment 1•12 years ago
|
||
| Reporter | ||
Comment 2•12 years ago
|
||
Regresion window:
Good
https://hg.mozilla.org/integration/mozilla-inbound/rev/969361ceb21d
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:30.0) Gecko/20100101 Firefox/30.0 ID:20140305185808
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/36e45a68452b
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:30.0) Gecko/20100101 Firefox/30.0 ID:20140305190607
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=969361ceb21d&tochange=36e45a68452b
Regressed by:
36e45a68452b Matt Woodrow — Bug 940455 - Add LayerManager functonality to clear out a portion of the window for the OS to paint. r=roc,Bas
Updated•12 years ago
|
Component: Toolbars and Customization → Graphics: Layers
Product: Firefox → Core
Not sure if this is the same issue, but the same/similar problem remains when an element requests full screen. Testcase: http://people.mozilla.com/~vladimir/misc/fs.html -- click fullscreen, you see the rounded rect cutout on Windows 8 at least.
| Assignee | ||
Comment 4•12 years ago
|
||
Attachment #8392076 -
Flags: review?(mstange)
Comment 7•12 years ago
|
||
Comment on attachment 8392076 [details] [diff] [review]
Use UpdateThemeGeometry for windows region clearing
Review of attachment 8392076 [details] [diff] [review]:
-----------------------------------------------------------------
Surprisingly simple!
Attachment #8392076 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 8•12 years ago
|
||
Assignee: nobody → matt.woodrow
Comment 11•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Updated•12 years ago
|
Comment 12•12 years ago
|
||
Reproduced on Win 8.1 64-bit, Nightly 2014-03-13.
Verified as fixed on Firefox 30 beta 2 (20140505140302).
You need to log in
before you can comment on or make changes to this bug.
Description
•