Bug 982812 - Use UpdateThemeGeometry for windows region clearing. r=mstange